media/seak/css/seak.css
.table tr.active {
    background: white;
}
.outermap {
   padding: 3px !important;
}
/* Removes Firefox imposed outline */
.nav-tabs > .active > a, .nav-tabs > .active > a:hover {
  outline:none;
}
.tab-content {
    padding: 14px; 
    padding-top: 21px;
    -webkit-border-radius: 0 0 4px 4px;
    -moz-border-radius: 0 0 4px 4px;
    border-radius: 0 0 4px 4px;

    /* Inspect the nav-tabs element of the current theme and copy */
    background-color: white;
    border: solid 1px #dddddd; 
    /* end copy */

    cursor: default;
    border-top: 0;
}
.well {
  margin-bottom: 4px !important;
}
.stand-detail div, .stand-detail table {
    padding-bottom: 0px;
}
.stand-detail .thumbnail h5 {
    text-align: center;
}
.stand-detail .vegetation {
    padding-bottom: 20px;
}
.hidden {
    display: none;
}
.olControlAttribution {
    bottom: 5px;
    font-size: 9px;
}
#customZoom {
    z-index: 1001;
    position: relative;
    top: 10px;
    left: 10px;
}
#customZoom a {
    text-decoration: none;
    position: absolute;
    display: block;
    width: 50px;
    text-align: center;
    font-weight: bold;
    color: #fff;
    background: #369;
    border: 1px solid #ccc;
    border-radius: 3px;
}
#customZoom a:hover {
    background: #036;
}
#customZoomOut {
    top: 25px;
}
body {
  padding-top: 60px; /* align container with bottom of the topbar */
}
.olControlAttribution {
    bottom: 2px !important;
    font-size: 7pt !important;
}
img.olTileImage {
    max-width: 256px !important;
}
label.olButton {
    display: inline;
    padding: 9px 10px 11px;
    line-height: 24px; 
}
#customZoom {
    z-index: 1001;
    position: relative;
    top: 100px;
    left: 190px;
}
#customZoom a {
    text-decoration: none;
    position: absolute;
    display: block;
    width: 50px;
    text-align: center;
    font-weight: bold;
    color: #fff;
    background: #369;
    border: 1px solid #ccc;
    border-radius: 3px;
}
#customZoom a:hover {
    background: #036;
}
#customZoomOut {
    top: 25px;
}
#layerswitcher-container {
    position: relative; 
    top: 12px; 
    left: -12px; 
    text-align:right; 
    float:right; 
    z-index: 1039;
    height: 0px;
}
#layerswitcher-list {
    width: 280px;
    float: right;
}
tr.not-targeted {
    color: #888 !important;
    font-style:italic;
}
div.tab-content-show {
    /* height: 430px; */
}
#layerswitcher {
    text-align:left;
    margin: 4px;
}
#watershed-name {
    position: absolute; 
    z-index: 1042;
    float:right;
    text-align:left;
    font-size: 85%;
    font-weight: bold;
    width: 252px;
    margin: 6px;
    margin-left: 46px;
    background: rgba(162,205,181,0.8); /* Works on all modern browsers */
}
#info {
    position: absolute; 
    z-index: 1042;
    float:right;
    text-align:left;
    font-size: 85%;
    width: 404px;
    margin: 6px;
}
div.dataLbl, div.baseLbl {
    padding-top: 12px;
    padding-bottom: 8px;
}
#map-loading {
    position: relative; 
    top: 100px; 
    text-align: center; 
    z-index: 1037;
    height: 0px;
}
h4 {
    margin-bottom: 12px;
}
.container-fluid {
    padding-right: 6px;
    padding-left: 8px;
}
.olImageLoadError { 
    /* when OL encounters a 404, don't display the pink image */
    display: none !important;
} 
.debug-only {
    display: none !important;
}
.slider-label {
    font-style: italic;
}
.slider-label-left {
   float:left;
   margin-right: 10px;
}
.slider-label-right {
   margin-left: 8px;
}
.slider-range {
  min-width:100px; 
  width:55%;
  display:inline-block;
}
#info-content {
  height:200px; 
  overflow:auto;
}
.group {list-style:none; padding:4px;margin:0;text-indent:none;font-size:12px;}
.groups {padding:0;margin:0;text-indent:none;}
.member_list { display:none; }
a.show_members {text-decoration:none;padding:5px;font-size:10px;margin-left:5px;}
a.show_members img {border:none;margin-right:5px;margin-bottom:-3px;}

/*
.table-striped tbody tr:nth-child(odd) td, .table-striped tbody tr:nth-child(odd) th {
    background-color: #39F9F9;
}
*/
.table-scenariolist tbody tr td, .table-scenariolist tbody tr th {
    color: #555555;
    background-color: #F9F9F9;
    cursor: pointer;
}
.table tbody tr:hover td, .table tbody tr:hover th {
    background-color: #EEEEEE;
}
td.scenario-name {
    color: #317EAC !important;
}
select#layer-select {
    width: 195px !important;
    height: 22px;
    margin-left: 8px;
    padding: 1px;
    margin-bottom: 4px;
    line-height: 22px;
}
.highlighted-planningunit {
    font-weight: bold;
}
.table-category-header {
    background-color: #e9e9e9;
}
.accordion-group {
    margin-bottom: 6px;
}
a.ui-state-focus {
    outline-color: #0097E5 !important;
    outline-width: 0px !important;
}
#map-legend {
    z-index: 1043;
    text-align:left;
    vertical-align:center;
    font-size: 85%;
    margin: 4px;
}
.legend-box {
    display: inline-block;
    width: 14px;
    height: 12px;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    border: 1px solid #444;
}
.legend-item {
    list-style:none;
    vertical-align: top;
}
ul.map-legend-group {
    margin: 0px;
    padding: 0px;
}
ul#map-legend-attr { 
    display:none;
}
input.input-micro {
    width: 30px;
}
.accordion-heading {
    background-color: whiteSmoke;
}


/* Scrolling tables */

tbody.pu-show {
    table-layout: fixed;
}

td.pu-show:nth-child(1), th.pu-show:nth-child(1) { width: 250px; }

td.pu-show, th.pu-show { 
    width: 150px; 
}

thead.pu-show {
    position: relative;
    display: block;
    border-bottom: 2px solid lightGrey;
}

tbody.pu-show {
    display: block;
    height: 300px;
    overflow-x: hidden;
    overflow-y: auto;
}

.old_ie_wrapper {
    height: 300px;
    overflow-x: hidden;
    overflow-y: auto;
}

.old_ie_wrapper tbody { 
    height: auto; 
}

